# market_manager

./: .gitignore  README.md  market_manager.ipynb  pyproject.toml  requirements.txt
market_manager/: __init__.py  __main__.py  constants.py  core.py  data.py  product.py
tests/: test_core.py  test_data.py  test_main.py
