[tool.poetry]
name = "market-manager"
version = "1.0.0"
description = ""
authors = ["gab25 <gabrielesorci.25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "0.9.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
